cambios agregamos texto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola, soy caranabo y vengo a decirte que tu tienes una cara de nabo :v (UwU)</p>
+    <p>Hola mis bros, soy caranabo y vengo a decirte que tu tienes una cara de nabo :v (UwU)</p>
 </body>
 </html>
